Revision history for Perl extension Asterisk::AMI.
=======
0.3
        - Support for old Callback and Timeout syntax has been removed.

        - 'PARSED' key in response has been replaced with 'BODY'

        - Added Asterisk::AMI::Async. Similiar to Asterisk::AMI::Common but it is safe for use in an event based application.

        - Removed method queue_member_toggle

        - Changed queue_member_pause to no longer accept a pause value and instead just pauses the member.

        - Added method queue_member_unpause to unpause a queue member.

        - Removed Asterisk::AMI::Common::Dev. New methods will just be added to Asterisk::AMI::Common and a note
        added about compatibility.

        - Abstracted some of the logic in Asterisk::AMI::Common to a seperate module so that it may be shared with
        Asterisk::AMI::Async.

        - New constructor option AutoDiscard. When enabled (set to 1) it will discard responses for any action sent that did not register a callback

        - New constructor option Default_CB allows for setting a default callback subroutine for all actions.

        - Default Authentication method changed to MD5 instead of plaintext.

        - The 'OriginateHack' is now on by default which also meas call events are enabled by default

        - Pre-populate ActionID in the response so that it exists in the event of a timeout with no response at all.

        NOT DONE

        - Look at the broken pipe issue

        - Asterisk::AMI::Async additional options - AutoDiscard? Default CB? Builtins? WarnOnBad? DieOnBad?

        - Asterisk::AMI::Async additional options - AutoDiscard? Default CB? Builtins? WarnOnBad? DieOnBad? - Done in Asterisk::AMI

        - Huge Doc changes, breakout config options into groups. Make less 'Scary'

        - Better handling when Blocking => 1 or 0 for various things, disconnects,

        - Huge Doc changes, breakout config options into groups. Make less 'Scary'
0.2.5